Java 21 upgrade